mbie 0.6.0
---------------------------------------------

NEW FUNCTION
* LongToStatPlanet() - Takes a long form data frame and converts it to StatPlanet format TODO - make it more flexible in different sortshierarchies of categories and subcategories and subsubcategories; add ability to add "source" for each indicator and "stories" to pop up at particular times

IMPROVED FUNCTION
* Improved Country13 to include more countries so it now covers all the countries in the RTEs lookup file and more and hence makes that lookup file redundant

REVISED DATA
* changed the current RTEs data frame into RTEs2012
* added a new RTEs data object which is the RTEs published on 14 November

MANAGEMENT CHANGE
* added to a repo on GitHub


mbie 0.5.1 
---------------------------------------------

NEW FUNCTION
* Country13() - converts a character or factor of "detailed" country names into the 13 country groupings used in IVS2.  Note - this function has been somewhat rushed into production and some rarely appearing countries need to be added to it.  For now, it works fine with allthe countries reported in IVS1.  Note this function now includes the argument shorten, defaults to TRUE, indicating whether to abbreviate the long names for China, UK and USA

DELETED FUNCTION
* deleted rjsdmx() which is rendered unnecessary by improvements to the Bank of Italy's RJSDMX package

REVISED DATA
* changed COPRDetail in IVStrips, IVSspend and IVSvisits to remove the circumflex from Cote d'Ivoire (it just caused too many problems....)




mbie 0.5.0 
---------------------------------------------

REVISED FUNCTIONS
* improved rjsdmx()

HELPFILES
* Example for autocheck() helpfile
* fixed alias issues with postscript logo helpfiles so now can be accessed by ?logo_white_ps etc
* fleshed out and improved helpfiles for stat_sa, stat_rollapplyr, stat_index1 and stat_index12




mbie 0.4.4
---------------------------------------------

NEW FUNCTIONS